# medium-django

./: README.md  main.py  pyproject.toml
medium/: asgi.py  middleware.py  serializers.py  settings.py  urls.py  wsgi.py
medium/api/: __init__.py  api_urls.py  urls.py  views.py
medium/api/serializers/: __init__.py  accounts.py  blogs.py
medium/api/v1/: accounts.py  blogs.py  urls.py
medium/common/: utils.py
medium/migrations/: 0001_initial.py  0002_user_role_verificationcode.py
medium/models/: __init__.py  blogs.py  comments.py  users.py
medium/web/: urls.py
medium/web/static/: package-lock.json
medium/web/static/css/: app.css
medium/web/templates/base/: base-layout.html  default-page.html
medium/web/templates/index/: index.html
medium/web/templates/login/: login.html  register.html  sign-in.html
medium/web/views/: accounts.py  site.py
